@@ -69,7 +69,7 @@ Display version information
 .BR procmail (1),
 .BR regex (7)
 .SH COPYRIGHT
-Copyright \(co 2000-2009 Andreas Bauer <baueran@in.tum.de>
+Copyright \(co 2000-2009 Andreas Bauer <baueran@gmail.com>
 .PP
 This is free software; see the source for copying conditions.  There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
