@@ -3,8 +3,11 @@ Mailfilter NEWS (Summary)
 
 mailfilter 0.8.2 (under development)
 
+  - Provide fix for APOP vulnerability (e.g., described in ticket
+    #2846 on mutt mailing list)
+
   - Fix build problems such that mailfilter compiles with recent
-    gcc
+    gcc and autotools (mainly for developers)
 
 mailfilter 0.8.1 (Sat Sep 15 17:14:49 EST 2007) [stable version]
 
